# profile.wearable.apps.native.watch-setting

./: .cproject  .project  AUTHORS  CMakeLists.txt  org.tizen.setting.efl  org.tizen.setting.manifest  org.tizen.setting.xml.in  org.tizen.watch-setting.efl  org.tizen.watch-setting.manifest  org.tizen.watch-setting.xml  org.tizen.watch-setting.xml.in  project.config  tizen-manifest.xml
data/: clocklist.xml  clocksetting.edc  langlist_all.xml  langlist_emul.xml  watch-setting.edc
data/changeable/: clocksetting.edc  fake_effect.edc
data/changeable/groups/: HVGA-inc.edc  bg_thumbnail.edc  blockingmode_settime.edc  brightness_layout.edc  clock_type_layout.edc  datefield.edc  edc_image_macro.edc  edc_images.edc  empty_swallow.edc  enhanced_pwrsaving.edc  gengrid_thumbnail_theme.edc  genlist_layout.edc  genlist_macro.edc  genlist_setting.edc  index.edc  pinlock_layout.edc  popup_layout.edc  progress.edc  setting_network_apn.edc  setting_permission.edc  setting_picker.edc  setting_sound.edc  setting_tts_macro.edc  theme_default_inc.edc  thumbnail_view.edc  two_finger_control.edc  volumn_popup.edc
data/changeable/tables/: org.tizen.clocksetting_ChangeableColorInfo.xml  org.tizen.clocksetting_ChangeableFontInfo.xml
data/groups/: battery.edc  bg_thumbnail.edc  clock_type_layout.edc  datefield.edc  default_inc.edc  edc_image_macro.edc  edc_images.edc  genlist_layout.edc  genlist_macro.edc  genlist_setting.edc  index.edc  open_licences_popup.edc  setting_indicator.edc  thumbnail_view.edc  volumn_popup.edc
data/images/: Thumbs.db
data/media-data/settings/Vibrations/: B2_Notification_General_v5_140306.ivt  B2_System_Long_v2_140221.ivt  B2_System_Vibration_Preview_140221.ivt  Touch.ivt
data/media-data/settings/Vibrations/haptic/default/: Notification_Call.ivt
include/: setting-battery.h  setting-bluetooth.h  setting-clock.h  setting-common-sound.h  setting-connection.h  setting-device.h  setting-display.h  setting-double.h  setting-homescreen.h  setting-info.h  setting-language.h  setting-motion.h  setting-notification.h  setting-privacy.h  setting-profile.h  setting-reset.h  setting-safety.h  setting-sound.h  setting-theme.h  setting-vibration.h  setting-volume.h  setting.h  setting_control_bt.h  setting_control_haptic.h  setting_data_vconf.h  setting_debug.h  setting_indicator_util.h  setting_view_toast.h  util.h
packaging/: org.tizen.setting.spec  org.tizen.watch-setting.spec
po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  lo.po  (+37 more)
src/: setting-battery.c  setting-bluetooth.c  setting-clock.c  setting-common-sound.c  setting-connection.c  setting-device.c  setting-display.c  setting-double.c  setting-homescreen.c  setting-info.c  setting-language.c  setting-motion.c  setting-notification.c  setting-privacy.c  setting-profile.c  setting-reset.c  setting-safety.c  setting-sound.c  setting-theme.c  setting-vibration.c  setting-volume-page.c  setting-volume.c  setting.c  setting_control_bt.c  setting_control_haptic.c  setting_data_vconf.c  setting_indicator_util.c  setting_view_toast.c  util.c
